miniextendr-macros/tests/ui/fn_return_non_string.stderr
error: prefer expects a string literal
 --> tests/ui/fn_return_non_string.rs:5:24
  |
5 | #[miniextendr(prefer = 1)]
  |                        ^
